--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/** Author: (cm-amos)Amos Mwongela
+ * File: style.css
+ */ 
+
+/* start */
 *{
   margin: 0;
   padding: 0;
@@ -34,3 +39,5 @@ p{
   margin-top: 15px;
   font-size: 50px;
 }
+
+/* END */
